DRAFT. Adds styles for bullets in transport list and changes them for pseudo elements.

--- a/css/style.css
+++ b/css/style.css
@@ -698,11 +698,27 @@ body {
 }
 
 .transport-list {
+  padding: 0;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 2.5em;
   letter-spacing: 0;
+  list-style: none;
+}
+
+.transport-list li {
+  position: relative;
+  padding-left: 35px;
+}
+
+.transport-list li::before {
+  content: "\00b0";
+  position: absolute;
+  left: 0;
+  top: 4px;
+  font-size: 1.4em;
+  color: #e6e6e6;
 }
 
 .site-footer {
