--- a/css/style.css
+++ b/css/style.css
@@ -112,13 +112,36 @@ body {
   outline: none;
 }
 
+.search-btn {
+  display: block;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  background-color: #f7e296;
+  border: 2px solid #000000;
+  visibility: hidden;
+}
+
 .search-field:focus {
   padding-bottom: 8px;
   border-bottom: 2px solid #000000;
 }
 
 .search-field:focus + .search-btn {
-  display: block;
+   display: block;
+ }
+
+.search-btn:hover {
+  background-color: #000000;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.search-btn:active {
+  background-color: #000000;
+  color: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
 }
 
 .search-field::placeholder {
@@ -127,16 +150,6 @@ body {
 
 .search-field:hover::placeholder {
   color: rgba(0, 0, 0, 0.6);
-}
-
-.search-btn {
-  display: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  background-color: #f7e296;
-  border: 2px solid #000000;
 }
 
 .site-link {
@@ -587,13 +600,6 @@ body {
   cursor: pointer;
 }
 
-.label-delivery {
-
-}
-
-.label-warranty {
-
-}
 
 .service input[type="radio"] {
   display: none;
@@ -1196,26 +1202,25 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   position: relative;
 }
 
-.item-link {
-  position: relative;
-  display: block;
-  width: 360px;
-  height: 380px;
-}
-
-.item-link::after {
+.good-item::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   display: none;
-  width: 100%;
-  height: 100%;
+  width: 360px;
+  height: 380px;
   background-color: rgba(238, 238, 238, 0.7);
 }
 
-.item-link:hover::after {
+.good-item:hover::after {
   display: block;
+}
+
+.item-link {
+  display: block;
+  width: 360px;
+  height: 380px;
 }
 
 .item-info {
