--- a/css/style.css
+++ b/css/style.css
@@ -988,7 +988,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .page-title {
-  width: 1160px;
+  width: 1100px;
   margin: 40px auto 30px;
   padding-left: 60px;
   font-family: "Gilroy", Tahoma, sans-serif;
@@ -999,7 +999,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .bread-crumbs {
   display: flex;
-  width: 1160px;
+  width: 1100px;
   padding-left: 60px;
   margin-left: auto;
   margin-right: auto;
@@ -1029,7 +1029,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .filter {
-  flex-grow: 2;
+  width: calc(50% - 250px);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1064,7 +1064,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .filter-title span {
-  padding-right: 135px;
+  padding-right: 180px;
 }
 
 .filter-form {
@@ -1119,7 +1119,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .goods-area {
-  flex-grow: 3;
+  width: calc(50% + 250px);
   margin-right: auto;
 }
 
