--- a/css/style.css
+++ b/css/style.css
@@ -1348,9 +1348,8 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 .goods-page-nav {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: 760px;
-  height: 70px;
   margin-top: 38px;
   margin-bottom: 77px;
   font-family: "Gilroy", Tahoma, sans-serif;
@@ -1362,16 +1361,27 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .back {
   padding-left: 30px;
+  padding-right: 30px;
+  margin-right: auto;
 }
 
 .forward {
+  padding-left: 30px;
   padding-right: 30px;
+  margin-left: auto;
 }
 
 .nav-link,
 .page-numbers {
   padding-top: 23px;
   padding-bottom: 23px;
+}
+
+.page-numbers {
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-link {
@@ -1381,21 +1391,14 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .page-number {
+  padding: 5px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.3);
 }
 
-.page-number:first-of-type {
-  margin-left: auto;
-}
-
-.page-number:nth-of-type(2) {
-  margin-right: 25px;
-  margin-left: 25px;
-}
-
-.page-number:last-of-type {
-  margin-right: auto;
+.page-number:nth-child(3) {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .active-page {
