--- a/css/style.css
+++ b/css/style.css
@@ -392,21 +392,35 @@ body {
   margin-bottom: 50px;
 }
 
+.btn,
 .link-btn {
   position: relative;
-  padding: 8px 44px;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.3em;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-  text-decoration: none;
   color: #000000;
+  border: none;
+}
+
+.link-btn {
+  padding: 8px 44px;
+  line-height: 1.3em;
+  text-decoration: none;
+}
+
+.btn {
+  background-color: transparent;
+  z-index: 0;
+}
+
+.btn:hover,
+.link-btn:hover {
+  background-color: #f0c52e;
 }
 
 .link-btn:hover {
-  background-color: #f0c52e;
   padding: 8px 44px;
 }
 
@@ -1045,7 +1059,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 30px;
+  padding: 0;
   border: none;
 }
 
@@ -1074,8 +1088,8 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .filter-form {
   width: 202px;
-  padding-right: 70px;
   margin-left: auto;
+  margin-right: 70px;
 }
 
 .filter-form label {
@@ -1162,6 +1176,15 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   right: -15px;
 }
 
+.field-color {
+  margin-bottom: 35px;
+}
+
+.param-color,
+.param-bt {
+  margin-bottom: 20px;
+}
+
 .checkbox-label {
   padding-left: 40px;
   background-image: url("../img/svg/checkbox-off.svg");
@@ -1171,6 +1194,10 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .filter-form input[type="checkbox"]:checked + .checkbox-label {
   background-image: url("../img/svg/checkbox-on.svg");
+}
+
+.field-bt {
+  margin-bottom: 40px;
 }
 
 .radio-label {
@@ -1185,7 +1212,20 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .filter-btn {
-  border: none;
+  cursor: pointer;
+  padding: 10px 40px;
+}
+
+.filter-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  height: 8px;
+  background-color: #f0c52e;
+  width: 100%;
+  z-index: -1;
 }
 
 .goods-area {
