--- a/css/style.css
+++ b/css/style.css
@@ -483,12 +483,13 @@ body {
 
 .categories {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width: 1160px;
-  height: 240px;
+  min-height: 240px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 80px;
-  justify-content: space-between;
 }
 
 .link-popular {
@@ -1001,9 +1002,9 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.inner-content * {
+/*.inner-content * {
   outline: 1px solid darkblue;
-}
+}*/
 
 .page-title {
   width: 1100px;
