--- a/css/style.css
+++ b/css/style.css
@@ -995,6 +995,14 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   z-index: 2;
 }
 
+.close-btn:hover {
+  background-color: rgba(255, 198, 0, 1);
+}
+
+.close-btn:active {
+  background-color: rgba(255, 198, 0, 0.3);
+}
+
 .close-btn::before,
 .close-btn::after {
   position: absolute;
