--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 
 .site-header {
   width: 1160px;
-  height: 185px;
+  min-height: 185px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
@@ -53,7 +53,7 @@ body {
   top: -15px;
   display: inline-block;
   margin-left: 60px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 48px;
   font-weight: 700;
@@ -76,7 +76,7 @@ body {
   align-items: flex-start;
   margin-left: 60px;
   margin-right: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 27px;
 }
 
 .header-panel-form {
@@ -117,8 +117,8 @@ body {
   display: none;
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   background-color: #f7e296;
   border: 2px solid #000000;
 }
@@ -323,6 +323,7 @@ body {
 
 .img-wrapper {
   width: 560px;
+  margin-top: -12px;
 }
 
 .img-wrapper img {
@@ -336,7 +337,8 @@ body {
   align-items: flex-start;
   flex-direction: column;
   width: 500px;
-  height: 470px;
+  min-height: 470px;
+  margin-left: 40px;
 }
 
 .slider-title {
@@ -350,6 +352,7 @@ body {
   font-size: 47px;
   font-weight: 700;
   line-height: 1.19em;
+  z-index: 0;
 }
 
 .slider-title::before {
@@ -371,26 +374,31 @@ body {
 
 .slide-selfie .slider-title::after {
   content: "01";
-  top: -44px;
-  right: -73px;
+  top: -47px;
+  right: -32px;
 }
 
 .slide-whatch .slider-title::after {
   content: "02";
-  top: -44px;
-  right: -73px;
+  top: -45px;
+  right: -31px;
+}
+
+.slide-quadrocopt .slider-title {
+  width: 500px;
 }
 
 .slide-quadrocopt .slider-title::after {
   content: "03";
   top: -44px;
-  right: -73px;
+  right: -12px;
+  z-index: -1;
 }
 
 .slider-el-description {
   width: 500px;
   height: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 54px;
 }
 
 .btn,
@@ -464,9 +472,9 @@ body {
 
 .slider-switch {
   position: absolute;
-  right: 100px;
-  bottom: 180px;
-  width: 160px;
+  right: 78px;
+  bottom: 167px;
+  width: 90px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -477,9 +485,13 @@ body {
   width: 25px;
   height: 25px;
   background-image: url("../img/svg/slider-button-empty.svg");
-  background-size: 15px;
+  background-size: 12px;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.slider-btn:active {
+  background-image: url("../img/svg/slider-button.svg");
 }
 
 .categories {
@@ -985,7 +997,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   position: absolute;
   top: 20px;
   right: 20px;
-  width: 55px;
+  width: 55px;-
   height: 55px;
   background-color: rgba(255, 198, 0, 0.5);
   border-radius: 50%;
@@ -1195,6 +1207,14 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   background-repeat: no-repeat;
   background-position-x: right;
   background-position-y: 13px;
+}
+
+.crumb:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.crumb:active {
+  color: rgba(0, 0, 0, 0.1);
 }
 
 .crumb:last-child {
@@ -1424,6 +1444,11 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   color: rgba(0, 0, 0, 0.3);
 }
 
+.sort-attribute:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sort-attribute:active,
 .active-sort {
   color: #000000;
 }
@@ -1445,6 +1470,14 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   background-image: url("../img/svg/icon-up-dir.svg");
   background-repeat: no-repeat;
   opacity: 0.2;
+}
+
+.sort-switch-btn:hover {
+  opacity: 0.4;
+}
+
+.sort-switch-btn:active {
+  opacity: 1;
 }
 
 .down-switch {
